--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Cryptfolio</title>
-  <base href="https://j-chimienti.github.io/crypto-portfolio">
+  <base href="https://j-chimienti.github.io/crypto-portfolio/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
