--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Cryptfolio</title>
+  <title>Alt folio</title>
   <base href="https://j-chimienti.github.io/crypto-portfolio/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
