--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Alt folio</title><base href="https://j-chimienti.github.io/crypto-portfolio/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.8720cf737de7ba0ebd0f.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script><script type="text/javascript" src="polyfills.fa62713060e7012f88ea.bundle.js"></script><script type="text/javascript" src="scripts.2b0d186a4c37532520a7.bundle.js"></script><script type="text/javascript" src="main.382a1f19891873600ec3.bundle.js"></script></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Alt folio</title><base href="https://j-chimienti.github.io/crypto-portfolio/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.8720cf737de7ba0ebd0f.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><!-- Start Single Page Apps for GitHub Pages --><script type="text/javascript">// Single Page Apps for GitHub Pages
+    // https://github.com/rafrex/spa-github-pages
+    // Copyright (c) 2016 Rafael Pedicini, licensed under the MIT License
+    // ----------------------------------------------------------------------
+    // This script checks to see if a redirect is present in the query string
+    // and converts it back into the correct url and adds it to the
+    // browser's history using window.history.replaceState(...),
+    // which won't cause the browser to attempt to load the new url.
+    // When the single page app is loaded further down in this file,
+    // the correct url will be waiting in the browser's history for
+    // the single page app to route accordingly.
+    (function (l) {
+        if (l.search) {
+            var q = {};
+            l.search.slice(1).split('&').forEach(function (v) {
+                var a = v.split('=');
+                q[a[0]] = a.slice(1).join('=').replace(/~and~/g, '&');
+            });
+            if (q.p !== undefined) {
+                window.history.replaceState(null, null,
+                    l.pathname.slice(0, -1) + (q.p || '') +
+                    (q.q ? ('?' + q.q) : '') +
+                    l.hash
+                );
+            }
+        }
+    }(window.location))</script><!-- End Single Page Apps for GitHub Pages --><script type="text/javascript" src="inline.318b50c57b4eba3d437b.bundle.js"></script><script type="text/javascript" src="polyfills.fa62713060e7012f88ea.bundle.js"></script><script type="text/javascript" src="scripts.2b0d186a4c37532520a7.bundle.js"></script><script type="text/javascript" src="main.382a1f19891873600ec3.bundle.js"></script></body></html>
