--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>CryptoPortfolio</title>
-  <base href="https://j-chimienti.github.io/crypto-portfolio">
+  <base href="https://j-chimienti.github.io/crypto-portfolio/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.76838e0aa2e5630c66a1.css"></head>
