--- a/404.html
+++ b/404.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>CryptoPortfolio</title>
+  <title>Crypto Portfolio</title>
   <base href="https://j-chimienti.github.io/crypto-portfolio/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.76838e0aa2e5630c66a1.css"></head>
+</head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.9926c8db02c4ae3ee015.js"></script><script type="text/javascript" src="scripts.95f63946aa03ea45d109.js"></script><script type="text/javascript" src="main.438f631c72c1840e8586.js"></script></body>
+<script type="text/javascript" src="runtime.js"></script><script type="text/javascript" src="polyfills.js"></script><script type="text/javascript" src="styles.js"></script><script type="text/javascript" src="scripts.js"></script><script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="main.js"></script></body>
 </html>
