--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<app-root></app-root>
+<noscript>
+  You need Javascript to run app
+</noscript>
 </body>
 </html>
