--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <base href="https://j-chimienti.github.io/crypto-portfolio/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.9e6302688fc76179edaa.css"></head>
+<link rel="stylesheet" href="styles.a98b02963dabcfc23bf2.css"></head>
 <body>
-  <app-root></app-root>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.9926c8db02c4ae3ee015.js"></script><script type="text/javascript" src="scripts.95f63946aa03ea45d109.js"></script><script type="text/javascript" src="main.d2a4670c621311bc1f10.js"></script></body>
+<app-root></app-root>
+<noscript>
+  You need Javascript to run app
+</noscript>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.9926c8db02c4ae3ee015.js"></script><script type="text/javascript" src="scripts.95f63946aa03ea45d109.js"></script><script type="text/javascript" src="main.27c540148d18408b9779.js"></script></body>
 </html>
