--- a/src/index.html
+++ b/src/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Crypto Portfolio</title>
+  <title id="title">Crypto Portfolio</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
-<app-root></app-root>
+
 <noscript>
   You need Javascript to run app
 </noscript>
+<app-root>
+</app-root>
 </body>
 </html>
