--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Crypto Portfolio</title>
-  <base href="https://j-chimienti.github.io/crypto-portfolio/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title id="title">Crypto Portfolio</title>
+  <base href="https://j-chimienti.github.io/crypto-portfolio/">  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 <link rel="stylesheet" href="styles.40e66fa7565e07c581f2.css"></head>
 <body>
-<app-root></app-root>
+
 <noscript>
   You need Javascript to run app
 </noscript>
-<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.9926c8db02c4ae3ee015.js"></script><script type="text/javascript" src="scripts.95f63946aa03ea45d109.js"></script><script type="text/javascript" src="main.686089260aa95e7b224f.js"></script></body>
+<app-root>
+</app-root>
+<script type="text/javascript" src="runtime.a66f828dca56eeb90e02.js"></script><script type="text/javascript" src="polyfills.9926c8db02c4ae3ee015.js"></script><script type="text/javascript" src="scripts.95f63946aa03ea45d109.js"></script><script type="text/javascript" src="main.e80df005bff7c2d6cb41.js"></script></body>
 </html>
